--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,11 @@
              <version>4.13.2</version>
              <scope>compile</scope>
          </dependency>
+         <dependency>
+             <groupId>commons-cli</groupId>
+             <artifactId>commons-cli</artifactId>
+             <version>1.4</version>
+         </dependency>
      </dependencies>
 
 </project>
